<resources>
    <string name="app_name">성공 지수 검사</string>
    <string name="result">성공 지수 검사 결과</string>

    <string name="previous">☜ 이전</string>
    <string name="home"> 홈 </string>
    <string name="next">다음 ☞</string>

    <string name="question1">1. 하루 30분 이상 책을 읽는다.</string>
    <string name="question2">2. 책 읽는 것을 좋아한다.</string>
    <string name="question3">3. 매일 할 일을 메모한다.</string>
    <string name="question4">4. TV를 하루에 1시간 미만 본다.</string>
    <string name="question5">5. TV를 볼 때는 주로 리얼리티 프로그램을 본다.</string>
    <string name="question6_std">6. 등교 3시간 전에 일어난다.</string>
    <string name="question6_work">6. 출근 3시간 전에 일어난다.</string>
    <string name="question7">7. 일주일에 4번 이상 운동한다.</string>
    <string name="question8_std">8. 등하교 시간에 오디오북을 듣는다.</string>
    <string name="question8_work">8. 출퇴근 시간에 오디오북을 듣는다.</string>
    <string name="question9">9. 목표를 글로 적어둔다.</string>
    <string name="question10">10. 구체적인 목표 달성에 집중한다.</string>
    <string name="question11">11. 평생을 통해 교육을 받으며, 자기계발에 힘을 써야 한다고 믿는다.</string>
    <string name="question12">12. 좋은 습관이 좋은 기회를 만든다고 믿는다.</string>
    <string name="question13">13. 나쁜 습관이 인생에 부정적인 영향을 미친다고 믿는다.</string>
    <string name="question14_std">14. 부모에게 성공하는 습관을 배운다.</string>
    <string name="question14_work">14. 자녀에게 성공하는 습관을 가르친다.</string>
    <string name="question15_std">15. 한 달에 10시간 이상 봉사활동을 한다.</string>
    <string name="question15_work">15. 자녀에게 한 달에 10시간 이상 봉사활동을 시킨다.</string>
    <string name="question16_std">16. 매달 2권 이상의 비문학 서적을 읽는다.</string>
    <string name="question16_work">16. 자녀에게 매달 2권 이상의 비문학 서적을 읽도록 격려한다.</string>

    <string name="question17_work">17. 연간소득</string>
    <string name="question17_std">17. 60세 때의 목표 연간소득</string>
    <string name="answer1_17">15억원 이상</string>
    <string name="answer2_17">13억원 ~ 15억원</string>
    <string name="answer3_17">11억원 ~ 13억원</string>
    <string name="answer4_17">9억원 ~ 11억원</string>
    <string name="answer5_17">7억원 ~ 9억원</string>
    <string name="answer6_17">5억원 ~ 7억원</string>
    <string name="answer7_17">3억원 ~ 5억원</string>
    <string name="answer8_17">1억원 ~ 3억원</string>
    <string name="answer9_17">5천만원 ~ 1억원</string>
    <string name="answer10_17">5천만원 이하</string>

    <string name="question18_work">18. 순자산</string>
    <string name="question18_std">18. 60세 때의 목표 순자산</string>
    <string name="answer1_18">300억원 이상</string>
    <string name="answer2_18">250억원 ~ 300억원</string>
    <string name="answer3_18">200억원 ~ 250억원</string>
    <string name="answer4_18">150억원 ~ 200억원</string>갸
    <string name="answer5_18">100억원 ~ 150억원</string>
    <string name="answer6_18">60억원 ~ 100억원</string>
    <string name="answer7_18">30억원 ~ 60억원</string>
    <string name="answer8_18">10억원 ~ 30억원</string>
    <string name="answer9_18">1천만원 ~ 10억원</string>
    <string name="answer10_18">1천만원 이하</string>

    <string name="very">매우 그렇다.</string>
    <string name="generally">대체로 그렇다.</string>
    <string name="normal">보통이다.</string>
    <string name="not">별로 그렇지 않다.</string>
    <string name="never">전혀 그렇지 않다.</string>
    
    <string name="result_title">검사 결과</string>
    <string name="result_index">※ 나의 성공 지수는?</string>
    <string name="result_goal">※ 나의 목표는?</string>
    <string name="poor">0 (가난한 사람)</string>
    <string name="rich">(부자) 100</string>
    
    <string name="explain">\n
        부자들의 공통된 습관, 일찍 일어나고 매일 책을 읽고 TV를 멀리하고, 할 일을 메모해두고 구체적인 목표를 세우고 좋은 습관은 키우고, 나쁜 습관은 버리려
        의식적으로 노력하는 것을 따라 한다고 반드시 성공하고 부자가 되는 것은 아니다.\n하지만 부자들과 가난한 사람들 사이에 이처럼 뚜렷하게 습관의 차이가 존재한다는 것은 부자 되는 습관이 부자가 될 확률을 높일 수 있다는 점을 시사한다.
        \n\n
        부자가 되는 습관 들은 곰곰이 살펴보면 부자가 되는데 확실히 도움이 된다. 일찍 일어나면 하루를 잘 준비하게 되고 할 일을 적어두면 할 일을 깜박하고 못하는 사태를 방지할 수 있다. 비문학 서적을 읽으면 경제, 사회, 과학 등에 대한 식견을 넓힐 수 있고 TV를 덜 보면 시간을 절약하고 목표를 구체적으로 세워 적어두면 그만큼 목표를 거듭 상기하면서 달성하고자 하는 의욕을 다질 수 있다.
        \n\n
        봉사활동을 하는 것도 결국 봉사활동을 통해 사회를 배우고 체험하는 기회를 얻을 것이다. 경쟁이 치열해진 사회에서 성공하려면 다른 사람들에게 도움이 되고 가치가 되는 일을 해야 한다는 가르침을 체감하게 해주는 것이다.
        \n\n
        부자 되는 습관을 3개월만 시도해보고 인생이 어떻게 바뀌는지 경험해 보는 것은 어떨까?</string>

</resources>
